@@ -16,16 +16,10 @@
 
 package org.springframework.ai.mcp.client.common.autoconfigure.annotations;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-
 import io.modelcontextprotocol.spec.McpSchema;
 import org.junit.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
-import reactor.core.publisher.Mono;
-
 import org.springframework.ai.mcp.annotation.McpPromptListChanged;
 import org.springframework.ai.mcp.annotation.McpResourceListChanged;
 import org.springframework.ai.mcp.annotation.McpToolListChanged;
@@ -35,6 +29,11 @@ import org.springframework.boot.autoconfigure.AutoConfigurations;
 import org.springframework.boot.test.context.runner.ApplicationContextRunner;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import reactor.core.publisher.Mono;
+
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -51,83 +50,83 @@ import static org.assertj.core.api.Assertions.assertThat;
 public class McpClientListChangedAnnotationsScanningIT {
 
 	private final ApplicationContextRunner contextRunner = new ApplicationContextRunner()
-		.withConfiguration(AutoConfigurations.of(McpClientAnnotationScannerAutoConfiguration.class));
+			.withConfiguration(AutoConfigurations.of(McpClientAnnotationScannerAutoConfiguration.class));
 
 	@Test
 	public void shouldScanAllThreeListChangedAnnotationsSync() {
 		this.contextRunner.withUserConfiguration(AllListChangedConfiguration.class)
-			.withPropertyValues("spring.ai.mcp.client.type=SYNC")
-			.run(context -> {
-				// Verify all three annotations were scanned
-				var registry = context.getBean(ClientMcpSyncHandlersRegistry.class);
-				var handlers = context.getBean(TestListChangedHandlers.class);
-				assertThat(registry).isNotNull();
+				.withPropertyValues("spring.ai.mcp.client.type=SYNC")
+				.run(context -> {
+					// Verify all three annotations were scanned
+					var registry = context.getBean(ClientMcpSyncHandlersRegistry.class);
+					var handlers = context.getBean(TestListChangedHandlers.class);
+					assertThat(registry).isNotNull();
 
-				List<McpSchema.Tool> updatedTools = List.of(McpSchema.Tool.builder().name("tool-1").build(),
-						McpSchema.Tool.builder().name("tool-2").build());
-				List<McpSchema.Prompt> updatedPrompts = List.of(
-						new McpSchema.Prompt("prompt-1", "a test prompt", Collections.emptyList()),
-						new McpSchema.Prompt("prompt-2", "another test prompt", Collections.emptyList()));
-				List<McpSchema.Resource> updatedResources = List.of(
-						McpSchema.Resource.builder("resource-1", "file:///resource/1").build(),
-						McpSchema.Resource.builder("resource-2", "file:///resource/2").build());
+					List<McpSchema.Tool> updatedTools = List.of(McpSchema.Tool.builder().name("tool-1").build(),
+							McpSchema.Tool.builder().name("tool-2").build());
+					List<McpSchema.Prompt> updatedPrompts = List.of(
+							new McpSchema.Prompt("prompt-1", "a test prompt", Collections.emptyList()),
+							new McpSchema.Prompt("prompt-2", "another test prompt", Collections.emptyList()));
+					List<McpSchema.Resource> updatedResources = List.of(
+							McpSchema.Resource.builder("resource-1", "file:///resource/1").build(),
+							McpSchema.Resource.builder("resource-2", "file:///resource/2").build());
 
-				registry.handleToolListChanged("test-client", updatedTools);
-				registry.handleResourceListChanged("test-client", updatedResources);
-				registry.handlePromptListChanged("test-client", updatedPrompts);
+					registry.handleToolListChanged("test-client", updatedTools);
+					registry.handleResourceListChanged("test-client", updatedResources);
+					registry.handlePromptListChanged("test-client", updatedPrompts);
 
-				assertThat(handlers.getCalls()).hasSize(3)
-					.containsExactlyInAnyOrder(
-							new TestListChangedHandlers.Call("resource-list-changed", updatedResources),
-							new TestListChangedHandlers.Call("prompt-list-changed", updatedPrompts),
-							new TestListChangedHandlers.Call("tool-list-changed", updatedTools));
-			});
+					assertThat(handlers.getCalls()).hasSize(3)
+							.containsExactlyInAnyOrder(
+									new TestListChangedHandlers.Call("resource-list-changed", updatedResources),
+									new TestListChangedHandlers.Call("prompt-list-changed", updatedPrompts),
+									new TestListChangedHandlers.Call("tool-list-changed", updatedTools));
+				});
 	}
 
 	@Test
 	public void shouldScanAllThreeListChangedAnnotationsAsync() {
 		this.contextRunner.withUserConfiguration(AllListChangedConfiguration.class)
-			.withPropertyValues("spring.ai.mcp.client.type=ASYNC")
-			.run(context -> {
-				// Verify all three annotations were scanned
-				var registry = context.getBean(ClientMcpAsyncHandlersRegistry.class);
-				var handlers = context.getBean(TestListChangedHandlers.class);
-				assertThat(registry).isNotNull();
+				.withPropertyValues("spring.ai.mcp.client.type=ASYNC")
+				.run(context -> {
+					// Verify all three annotations were scanned
+					var registry = context.getBean(ClientMcpAsyncHandlersRegistry.class);
+					var handlers = context.getBean(TestListChangedHandlers.class);
+					assertThat(registry).isNotNull();
 
-				List<McpSchema.Tool> updatedTools = List.of(McpSchema.Tool.builder().name("tool-1").build(),
-						McpSchema.Tool.builder().name("tool-2").build());
-				List<McpSchema.Prompt> updatedPrompts = List.of(
-						new McpSchema.Prompt("prompt-1", "a test prompt", Collections.emptyList()),
-						new McpSchema.Prompt("prompt-2", "another test prompt", Collections.emptyList()));
-				List<McpSchema.Resource> updatedResources = List.of(
-						McpSchema.Resource.builder("resource-1", "file:///resource/1").build(),
-						McpSchema.Resource.builder("resource-2", "file:///resource/2").build());
+					List<McpSchema.Tool> updatedTools = List.of(McpSchema.Tool.builder().name("tool-1").build(),
+							McpSchema.Tool.builder().name("tool-2").build());
+					List<McpSchema.Prompt> updatedPrompts = List.of(
+							new McpSchema.Prompt("prompt-1", "a test prompt", Collections.emptyList()),
+							new McpSchema.Prompt("prompt-2", "another test prompt", Collections.emptyList()));
+					List<McpSchema.Resource> updatedResources = List.of(
+							McpSchema.Resource.builder("resource-1", "file:///resource/1").build(),
+							McpSchema.Resource.builder("resource-2", "file:///resource/2").build());
 
-				registry.handleToolListChanged("test-client", updatedTools).block();
-				registry.handleResourceListChanged("test-client", updatedResources).block();
-				registry.handlePromptListChanged("test-client", updatedPrompts).block();
+					registry.handleToolListChanged("test-client", updatedTools).block();
+					registry.handleResourceListChanged("test-client", updatedResources).block();
+					registry.handlePromptListChanged("test-client", updatedPrompts).block();
 
-				assertThat(handlers.getCalls()).hasSize(3)
-					.containsExactlyInAnyOrder(
-							new TestListChangedHandlers.Call("resource-list-changed", updatedResources),
-							new TestListChangedHandlers.Call("prompt-list-changed", updatedPrompts),
-							new TestListChangedHandlers.Call("tool-list-changed", updatedTools));
-			});
+					assertThat(handlers.getCalls()).hasSize(3)
+							.containsExactlyInAnyOrder(
+									new TestListChangedHandlers.Call("resource-list-changed", updatedResources),
+									new TestListChangedHandlers.Call("prompt-list-changed", updatedPrompts),
+									new TestListChangedHandlers.Call("tool-list-changed", updatedTools));
+				});
 	}
 
 	@ParameterizedTest
-	@ValueSource(strings = { "SYNC", "ASYNC" })
+	@ValueSource(strings = {"SYNC", "ASYNC"})
 	void shouldNotScanAnnotationsWhenScannerDisabled(String clientType) {
 		String prefix = clientType.toLowerCase();
 
 		this.contextRunner.withUserConfiguration(AllListChangedConfiguration.class)
-			.withPropertyValues("spring.ai.mcp.client.type=" + clientType,
-					"spring.ai.mcp.client.annotation-scanner.enabled=false")
-			.run(context -> {
-				// Verify scanner beans were not created
-				assertThat(context).doesNotHaveBean(ClientMcpSyncHandlersRegistry.class);
-				assertThat(context).doesNotHaveBean(ClientMcpAsyncHandlersRegistry.class);
-			});
+				.withPropertyValues("spring.ai.mcp.client.type=" + clientType,
+						"spring.ai.mcp.client.annotation-scanner.enabled=false")
+				.run(context -> {
+					// Verify scanner beans were not created
+					assertThat(context).doesNotHaveBean(ClientMcpSyncHandlersRegistry.class);
+					assertThat(context).doesNotHaveBean(ClientMcpAsyncHandlersRegistry.class);
+				});
 	}
 
 	@Configuration
